# serializer version: 1
# name: TestGenerateTrendHtmlSnapshot.test_empty
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Audit History — mystore.myshopify.com</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container { max-width: 1000px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }  # noqa: E501
          h1 { font-size: 1.8em; margin-bottom: 10px; color: #1a1a1a; }
          h2 { font-size: 1.3em; margin-top: 25px; margin-bottom: 10px; color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 5px; }  # noqa: E501
          .meta { background: #ecf0f1; padding: 15px; border-radius: 5px; margin-bottom: 20px; }
          .meta p { margin: 5px 0; }
          .meta strong { color: #2c3e50; }
          table { width: 100%; border-collapse: collapse; margin: 15px 0; }
          th, td { padding: 10px; text-align: left; border-bottom: 1px solid #ddd; }
          th { background: #34495e; color: white; font-weight: 600; }
          tr:hover { background: #f8f9fa; }
          .good { color: #27ae60; font-weight: bold; }
          .needs-improvement { color: #f39c12; font-weight: bold; }
          .poor { color: #e74c3c; font-weight: bold; }
          .label { display: inline-block; padding: 2px 8px; border-radius: 10px; color: white; font-size: 0.8em; background: #7f8c8d; }  # noqa: E501
          .summary-box { background: #e8f4fd; border-left: 4px solid #3498db; padding: 15px; margin: 15px 0; border-radius: 3px; }  # noqa: E501
          footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; text-align: center; color: #7f8c8d; font-size: 0.9em; }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>📊 Audit History: mystore.myshopify.com</h1>
          <div class="meta">
              <p><strong>Snapshots:</strong> 0</p>
              <p><strong>Date range:</strong> —
                  &ndash; —</p>
          </div>
          
          <h2>📋 Snapshot Timeline</h2>
          <table>
              <thead>
                  <tr>
                      <th>Timestamp</th>
                      <th>LCP</th>
                      <th>CLS</th>
                      <th>INP</th>
                      <th>TTFB</th>
                      <th>Images</th>
                      <th>Size</th>
                      <th>Score</th>
                  </tr>
              </thead>
              <tbody>
              </tbody>
          </table>
  
          <footer>
              <p>Generated by shopify-image-audit — audit history report</p>
          </footer>
      </div>
  </body>
  </html>
  
  '''
# ---
# name: TestGenerateTrendHtmlSnapshot.test_multi_entry_mixed_vitals
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Audit History — mystore.myshopify.com</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container { max-width: 1000px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }  # noqa: E501
          h1 { font-size: 1.8em; margin-bottom: 10px; color: #1a1a1a; }
          h2 { font-size: 1.3em; margin-top: 25px; margin-bottom: 10px; color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 5px; }  # noqa: E501
          .meta { background: #ecf0f1; padding: 15px; border-radius: 5px; margin-bottom: 20px; }
          .meta p { margin: 5px 0; }
          .meta strong { color: #2c3e50; }
          table { width: 100%; border-collapse: collapse; margin: 15px 0; }
          th, td { padding: 10px; text-align: left; border-bottom: 1px solid #ddd; }
          th { background: #34495e; color: white; font-weight: 600; }
          tr:hover { background: #f8f9fa; }
          .good { color: #27ae60; font-weight: bold; }
          .needs-improvement { color: #f39c12; font-weight: bold; }
          .poor { color: #e74c3c; font-weight: bold; }
          .label { display: inline-block; padding: 2px 8px; border-radius: 10px; color: white; font-size: 0.8em; background: #7f8c8d; }  # noqa: E501
          .summary-box { background: #e8f4fd; border-left: 4px solid #3498db; padding: 15px; margin: 15px 0; border-radius: 3px; }  # noqa: E501
          footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; text-align: center; color: #7f8c8d; font-size: 0.9em; }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>📊 Audit History: mystore.myshopify.com</h1>
          <div class="meta">
              <p><strong>Snapshots:</strong> 2</p>
              <p><strong>Date range:</strong> 2026-07-30
                  &ndash; 2026-07-23</p>
          </div>
                  <div class="summary-box">
              <strong>Latest audit:</strong> 2026-07-23 10:00:00 &mdash;
              LCP 4200ms, CLS 0.180, INP 320ms,
              3 images, 532 KB
          </div>
  
          <h2>📋 Snapshot Timeline</h2>
          <table>
              <thead>
                  <tr>
                      <th>Timestamp</th>
                      <th>LCP</th>
                      <th>CLS</th>
                      <th>INP</th>
                      <th>TTFB</th>
                      <th>Images</th>
                      <th>Size</th>
                      <th>Score</th>
                  </tr>
              </thead>
              <tbody>
                  <tr>
                      <td>2026-07-30 15:00:00 <span class="label">After optimisation</span></td>
                      <td class="good">1800ms</td>
                      <td class="good">0.050</td>
                      <td class="good">100ms</td>
                      <td class="good">400ms</td>
                      <td>3</td>
                      <td>532 KB</td>
                      <td>77</td>
                  </tr>                <tr>
                      <td>2026-07-23 10:00:00 <span class="label">Baseline</span></td>
                      <td class="poor">4200ms</td>
                      <td class="needs-improvement">0.180</td>
                      <td class="needs-improvement">320ms</td>
                      <td class="needs-improvement">900ms</td>
                      <td>3</td>
                      <td>532 KB</td>
                      <td>77</td>
                  </tr>            </tbody>
          </table>
  
          <footer>
              <p>Generated by shopify-image-audit — audit history report</p>
          </footer>
      </div>
  </body>
  </html>
  
  '''
# ---
# name: TestGenerateTrendHtmlSnapshot.test_multi_entry_poor_vitals
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Audit History — mystore.myshopify.com</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container { max-width: 1000px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }  # noqa: E501
          h1 { font-size: 1.8em; margin-bottom: 10px; color: #1a1a1a; }
          h2 { font-size: 1.3em; margin-top: 25px; margin-bottom: 10px; color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 5px; }  # noqa: E501
          .meta { background: #ecf0f1; padding: 15px; border-radius: 5px; margin-bottom: 20px; }
          .meta p { margin: 5px 0; }
          .meta strong { color: #2c3e50; }
          table { width: 100%; border-collapse: collapse; margin: 15px 0; }
          th, td { padding: 10px; text-align: left; border-bottom: 1px solid #ddd; }
          th { background: #34495e; color: white; font-weight: 600; }
          tr:hover { background: #f8f9fa; }
          .good { color: #27ae60; font-weight: bold; }
          .needs-improvement { color: #f39c12; font-weight: bold; }
          .poor { color: #e74c3c; font-weight: bold; }
          .label { display: inline-block; padding: 2px 8px; border-radius: 10px; color: white; font-size: 0.8em; background: #7f8c8d; }  # noqa: E501
          .summary-box { background: #e8f4fd; border-left: 4px solid #3498db; padding: 15px; margin: 15px 0; border-radius: 3px; }  # noqa: E501
          footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; text-align: center; color: #7f8c8d; font-size: 0.9em; }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>📊 Audit History: mystore.myshopify.com</h1>
          <div class="meta">
              <p><strong>Snapshots:</strong> 2</p>
              <p><strong>Date range:</strong> 2026-07-30
                  &ndash; 2026-07-23</p>
          </div>
                  <div class="summary-box">
              <strong>Latest audit:</strong> 2026-07-23 10:00:00 &mdash;
              LCP 5000ms, CLS 0.300, INP 600ms,
              3 images, 532 KB
          </div>
  
          <h2>📋 Snapshot Timeline</h2>
          <table>
              <thead>
                  <tr>
                      <th>Timestamp</th>
                      <th>LCP</th>
                      <th>CLS</th>
                      <th>INP</th>
                      <th>TTFB</th>
                      <th>Images</th>
                      <th>Size</th>
                      <th>Score</th>
                  </tr>
              </thead>
              <tbody>
                  <tr>
                      <td>2026-07-30 15:00:00 <span class="label">After partial fix</span></td>
                      <td class="needs-improvement">3500ms</td>
                      <td class="needs-improvement">0.200</td>
                      <td class="needs-improvement">400ms</td>
                      <td class="needs-improvement">1500ms</td>
                      <td>3</td>
                      <td>532 KB</td>
                      <td>77</td>
                  </tr>                <tr>
                      <td>2026-07-23 10:00:00 <span class="label">Critical state</span></td>
                      <td class="poor">5000ms</td>
                      <td class="poor">0.300</td>
                      <td class="poor">600ms</td>
                      <td class="poor">2000ms</td>
                      <td>3</td>
                      <td>532 KB</td>
                      <td>77</td>
                  </tr>            </tbody>
          </table>
  
          <footer>
              <p>Generated by shopify-image-audit — audit history report</p>
          </footer>
      </div>
  </body>
  </html>
  
  '''
# ---
# name: TestGenerateTrendHtmlSnapshot.test_single_entry_good_vitals
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Audit History — mystore.myshopify.com</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container { max-width: 1000px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }  # noqa: E501
          h1 { font-size: 1.8em; margin-bottom: 10px; color: #1a1a1a; }
          h2 { font-size: 1.3em; margin-top: 25px; margin-bottom: 10px; color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 5px; }  # noqa: E501
          .meta { background: #ecf0f1; padding: 15px; border-radius: 5px; margin-bottom: 20px; }
          .meta p { margin: 5px 0; }
          .meta strong { color: #2c3e50; }
          table { width: 100%; border-collapse: collapse; margin: 15px 0; }
          th, td { padding: 10px; text-align: left; border-bottom: 1px solid #ddd; }
          th { background: #34495e; color: white; font-weight: 600; }
          tr:hover { background: #f8f9fa; }
          .good { color: #27ae60; font-weight: bold; }
          .needs-improvement { color: #f39c12; font-weight: bold; }
          .poor { color: #e74c3c; font-weight: bold; }
          .label { display: inline-block; padding: 2px 8px; border-radius: 10px; color: white; font-size: 0.8em; background: #7f8c8d; }  # noqa: E501
          .summary-box { background: #e8f4fd; border-left: 4px solid #3498db; padding: 15px; margin: 15px 0; border-radius: 3px; }  # noqa: E501
          footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; text-align: center; color: #7f8c8d; font-size: 0.9em; }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>📊 Audit History: mystore.myshopify.com</h1>
          <div class="meta">
              <p><strong>Snapshots:</strong> 1</p>
              <p><strong>Date range:</strong> 2026-07-30
                  &ndash; 2026-07-30</p>
          </div>
                  <div class="summary-box">
              <strong>Latest audit:</strong> 2026-07-30 15:00:00 &mdash;
              LCP 1800ms, CLS 0.050, INP 100ms,
              3 images, 532 KB
          </div>
  
          <h2>📋 Snapshot Timeline</h2>
          <table>
              <thead>
                  <tr>
                      <th>Timestamp</th>
                      <th>LCP</th>
                      <th>CLS</th>
                      <th>INP</th>
                      <th>TTFB</th>
                      <th>Images</th>
                      <th>Size</th>
                      <th>Score</th>
                  </tr>
              </thead>
              <tbody>
                  <tr>
                      <td>2026-07-30 15:00:00</td>
                      <td class="good">1800ms</td>
                      <td class="good">0.050</td>
                      <td class="good">100ms</td>
                      <td class="good">400ms</td>
                      <td>3</td>
                      <td>532 KB</td>
                      <td>77</td>
                  </tr>            </tbody>
          </table>
  
          <footer>
              <p>Generated by shopify-image-audit — audit history report</p>
          </footer>
      </div>
  </body>
  </html>
  
  '''
# ---
# name: TestRenderComparisonSectionSnapshot.test_no_comparison
  ''
# ---
# name: TestRenderComparisonSectionSnapshot.test_with_comparison_data
  '''
          <div class="comparison">
              <h2>🔄 Before / After Comparison</h2>
              <p><strong>Before:</strong> https://demo.myshopify.com &nbsp; → &nbsp; <strong>After:</strong> https://demo.myshopify.com</p>
              <h3>Core Web Vitals</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Metric</th>
                          <th>Before</th>
                          <th>After</th>
                          <th>Change</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>LCP</td>
                      <td class="bytes">4200ms</td>
                      <td class="bytes">2200ms</td>
                      <td><span class="delta improved">2000ms (-48%)</span></td>
                  </tr>
                  <tr>
                      <td>CLS</td>
                      <td class="bytes">0.180</td>
                      <td class="bytes">0.080</td>
                      <td><span class="delta improved">0.100 (-56%)</span></td>
                  </tr>
                  <tr>
                      <td>INP</td>
                      <td class="bytes">320ms</td>
                      <td class="bytes">180ms</td>
                      <td><span class="delta improved">140ms (-44%)</span></td>
                  </tr>
                  <tr>
                      <td>TTFB</td>
                      <td class="bytes">900ms</td>
                      <td class="bytes">700ms</td>
                      <td><span class="delta improved">200ms (-22%)</span></td>
                  </tr>
                  </tbody>
              </table>
              <h3>Image Optimisation</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Metric</th>
                          <th>Before</th>
                          <th>After</th>
                          <th>Change</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>Total image bytes</td>
                      <td class="bytes">545000</td>
                      <td class="bytes">545000</td>
                      <td><span class="delta unchanged">0</span></td>
                  </tr>
                  <tr>
                      <td>Estimated waste</td>
                      <td class="bytes">30000</td>
                      <td class="bytes">30000</td>
                      <td><span class="delta unchanged">0</span></td>
                  </tr>
                  <tr>
                      <td>Avg image score</td>
                      <td class="bytes">76.7</td>
                      <td class="bytes">76.7</td>
                      <td><span class="delta unchanged">0.0</span></td>
                  </tr>
                  </tbody>
              </table>
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/hero.jpg</td>
                      <td>hero</td>
                      <td>-1054.7 KB</td>
                      <td>0</td>
                      <td><span class="status-badge" style="background:#27ae60;">improved</span></td>
                      <td class="recommendation">Image shrunk significantly.</td>
                  </tr>
                  <tr>
                      <td>https://cdn.example.com/thumb.png</td>
                      <td>decorative</td>
                      <td>0.0 KB</td>
                      <td>0</td>
                      <td><span class="status-badge" style="background:#7f8c8d;">unchanged</span></td>
                      <td class="recommendation"></td>
                  </tr>
                  <tr>
                      <td>https://cdn.example.com/product.jpg</td>
                      <td>product_primary → —</td>
                      <td>-371.1 KB</td>
                      <td>—</td>
                      <td><span class="status-badge" style="background:#95a5a6;">removed</span></td>
                      <td class="recommendation">Image removed.</td>
                  </tr>
                  <tr>
                      <td>https://cdn.example.com/new-thumb.webp</td>
                      <td>— → decorative</td>
                      <td>+29.3 KB</td>
                      <td>—</td>
                      <td><span class="status-badge" style="background:#2980b9;">added</span></td>
                      <td class="recommendation">New image; consider WebP/AVIF.</td>
                  </tr>
                  <tr>
                      <td>https://cdn.example.com/regressed.jpg</td>
                      <td>decorative</td>
                      <td>+48.8 KB</td>
                      <td>-10</td>
                      <td><span class="status-badge" style="background:#c0392b;">regressed</span></td>
                      <td class="recommendation">Image grew; review.</td>
                  </tr>                </tbody>
              </table>
              <h3 style="color:#27ae60;">✅ Improvements</h3>
              <ul><li>LCP 4200ms → 2200ms (-48%)</li></ul>
              
              <div class="roi-box">
                  <strong>ROI estimate:</strong> Estimated ~20% conversion uplift from a 2000ms LCP improvement.
              </div>
          </div>
  
  
  '''
# ---
# name: TestRenderFooterSnapshot.test_footer_with_source_file
  '''
  
          <footer>
              <p>Generated by shopify-image-audit v0.11.0</p>
              <p>Report generated from: my_audit.json</p>
          </footer>
      </div>
  </body>
  </html>
  
  '''
# ---
# name: TestRenderHeadSnapshot.test_brand_color_and_logo
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Shopify Image Audit Report</title>
      <style>
          :root { --brand-color: #ff6b35; }
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container {
              max-width: 1200px;
              margin: 0 auto;
              background: white;
              padding: 40px;
              border-radius: 8px;
              box-shadow: 0 2px 8px rgba(0,0,0,0.1);
          }
          .brand-logo {
              display: block;
              max-height: 80px;
              max-width: 240px;
              margin-bottom: 20px;
          }
          h1 {
              font-size: 2em;
              margin-bottom: 10px;
              color: #1a1a1a;
          }
          h2 {
              font-size: 1.5em;
              margin-top: 30px;
              margin-bottom: 15px;
              color: #2c3e50;
              border-bottom: 2px solid var(--brand-color, #3498db);
              padding-bottom: 5px;
          }
          h3 {
              font-size: 1.2em;
              margin-top: 20px;
              margin-bottom: 10px;
              color: #34495e;
          }
          .meta {
              background: #ecf0f1;
              padding: 15px;
              border-radius: 5px;
              margin-bottom: 20px;
          }
          .meta p {
              margin: 5px 0;
          }
          .meta strong {
              color: #2c3e50;
          }
          .vitals {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .vital-card {
              background: white;
              border: 2px solid #ddd;
              border-radius: 5px;
              padding: 15px;
              text-align: center;
          }
          .vital-card.good { border-color: #27ae60; }
          .vital-card.needs-improvement { border-color: #f39c12; }
          .vital-card.poor { border-color: #e74c3c; }
          .vital-name {
              font-size: 0.9em;
              color: #7f8c8d;
              text-transform: uppercase;
              letter-spacing: 1px;
          }
          .vital-value {
              font-size: 2em;
              font-weight: bold;
              margin: 10px 0;
          }
          .vital-card.good .vital-value { color: #27ae60; }
          .vital-card.needs-improvement .vital-value { color: #f39c12; }
          .vital-card.poor .vital-value { color: #e74c3c; }
          .stats-grid {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .stat-box {
              background: var(--brand-color, #3498db);
              color: white;
              padding: 20px;
              border-radius: 5px;
              text-align: center;
          }
          .stat-value {
              font-size: 2em;
              font-weight: bold;
          }
          .stat-label {
              font-size: 0.9em;
              opacity: 0.9;
              margin-top: 5px;
          }
          .issues {
              background: #fff3cd;
              border-left: 4px solid #ffc107;
              padding: 15px;
              margin: 15px 0;
          }
          .issues ul {
              margin-left: 20px;
              margin-top: 10px;
          }
          .issues li {
              margin: 5px 0;
          }
          table {
              width: 100%;
              border-collapse: collapse;
              margin: 20px 0;
          }
          th, td {
              padding: 12px;
              text-align: left;
              border-bottom: 1px solid #ddd;
          }
          th {
              background: #34495e;
              color: white;
              font-weight: 600;
          }
          tr:hover {
              background: #f8f9fa;
          }
          .score {
              font-weight: bold;
              padding: 4px 8px;
              border-radius: 3px;
          }
          .score.high { background: #d4edda; color: #155724; }
          .score.medium { background: #fff3cd; color: #856404; }
          .score.low { background: #f8d7da; color: #721c24; }
          .role {
              display: inline-block;
              padding: 3px 8px;
              border-radius: 3px;
              font-size: 0.85em;
              font-weight: 500;
          }
          .role.hero { background: #e8f5e9; color: #2e7d32; }
          .role.above_fold { background: #e3f2fd; color: #1565c0; }
          .role.product_primary { background: #f3e5f5; color: #6a1b9a; }
          .role.product_secondary { background: #fff3e0; color: #e65100; }
          .role.decorative { background: #fce4ec; color: #c2185b; }
          .role.unknown { background: #eceff1; color: #455a64; }
          .bytes {
              font-family: 'Courier New', monospace;
              font-size: 0.9em;
          }
          .lcp-badge {
              display: inline-block;
              background: #ff9800;
              color: white;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.75em;
              font-weight: bold;
          }
          .recommendation {
              font-size: 0.9em;
              color: #555;
              font-style: italic;
          }
          footer {
              margin-top: 40px;
              padding-top: 20px;
              border-top: 1px solid #ddd;
              text-align: center;
              color: #7f8c8d;
              font-size: 0.9em;
          }
          /* Before/after comparison section (#18/#20). */
          .comparison {
              margin: 20px 0;
          }
          .delta {
              font-weight: bold;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.9em;
          }
          .delta.improved { background: #d4edda; color: #155724; }
          .delta.regressed { background: #f8d7da; color: #721c24; }
          .delta.unchanged { background: #e2e3e5; color: #383d41; }
          .status-badge {
              display: inline-block;
              padding: 2px 8px;
              border-radius: 10px;
              color: white;
              font-size: 0.8em;
              font-weight: 500;
              text-transform: lowercase;
          }
          .roi-box {
              background: #e8f4fd;
              border-left: 4px solid var(--brand-color, #3498db);
              padding: 15px;
              margin: 15px 0;
          }
      </style>
  </head>
  <body>
      <div class="container">
      <img class="brand-logo" alt="Brand logo" src="data:image/png;base64,iVBORw0KGgo=">
          <h1>🖼️ Shopify Image Audit Report</h1>
  
  
  '''
# ---
# name: TestRenderHeadSnapshot.test_brand_color_only
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Shopify Image Audit Report</title>
      <style>
          :root { --brand-color: #3498db; }
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container {
              max-width: 1200px;
              margin: 0 auto;
              background: white;
              padding: 40px;
              border-radius: 8px;
              box-shadow: 0 2px 8px rgba(0,0,0,0.1);
          }
          .brand-logo {
              display: block;
              max-height: 80px;
              max-width: 240px;
              margin-bottom: 20px;
          }
          h1 {
              font-size: 2em;
              margin-bottom: 10px;
              color: #1a1a1a;
          }
          h2 {
              font-size: 1.5em;
              margin-top: 30px;
              margin-bottom: 15px;
              color: #2c3e50;
              border-bottom: 2px solid var(--brand-color, #3498db);
              padding-bottom: 5px;
          }
          h3 {
              font-size: 1.2em;
              margin-top: 20px;
              margin-bottom: 10px;
              color: #34495e;
          }
          .meta {
              background: #ecf0f1;
              padding: 15px;
              border-radius: 5px;
              margin-bottom: 20px;
          }
          .meta p {
              margin: 5px 0;
          }
          .meta strong {
              color: #2c3e50;
          }
          .vitals {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .vital-card {
              background: white;
              border: 2px solid #ddd;
              border-radius: 5px;
              padding: 15px;
              text-align: center;
          }
          .vital-card.good { border-color: #27ae60; }
          .vital-card.needs-improvement { border-color: #f39c12; }
          .vital-card.poor { border-color: #e74c3c; }
          .vital-name {
              font-size: 0.9em;
              color: #7f8c8d;
              text-transform: uppercase;
              letter-spacing: 1px;
          }
          .vital-value {
              font-size: 2em;
              font-weight: bold;
              margin: 10px 0;
          }
          .vital-card.good .vital-value { color: #27ae60; }
          .vital-card.needs-improvement .vital-value { color: #f39c12; }
          .vital-card.poor .vital-value { color: #e74c3c; }
          .stats-grid {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .stat-box {
              background: var(--brand-color, #3498db);
              color: white;
              padding: 20px;
              border-radius: 5px;
              text-align: center;
          }
          .stat-value {
              font-size: 2em;
              font-weight: bold;
          }
          .stat-label {
              font-size: 0.9em;
              opacity: 0.9;
              margin-top: 5px;
          }
          .issues {
              background: #fff3cd;
              border-left: 4px solid #ffc107;
              padding: 15px;
              margin: 15px 0;
          }
          .issues ul {
              margin-left: 20px;
              margin-top: 10px;
          }
          .issues li {
              margin: 5px 0;
          }
          table {
              width: 100%;
              border-collapse: collapse;
              margin: 20px 0;
          }
          th, td {
              padding: 12px;
              text-align: left;
              border-bottom: 1px solid #ddd;
          }
          th {
              background: #34495e;
              color: white;
              font-weight: 600;
          }
          tr:hover {
              background: #f8f9fa;
          }
          .score {
              font-weight: bold;
              padding: 4px 8px;
              border-radius: 3px;
          }
          .score.high { background: #d4edda; color: #155724; }
          .score.medium { background: #fff3cd; color: #856404; }
          .score.low { background: #f8d7da; color: #721c24; }
          .role {
              display: inline-block;
              padding: 3px 8px;
              border-radius: 3px;
              font-size: 0.85em;
              font-weight: 500;
          }
          .role.hero { background: #e8f5e9; color: #2e7d32; }
          .role.above_fold { background: #e3f2fd; color: #1565c0; }
          .role.product_primary { background: #f3e5f5; color: #6a1b9a; }
          .role.product_secondary { background: #fff3e0; color: #e65100; }
          .role.decorative { background: #fce4ec; color: #c2185b; }
          .role.unknown { background: #eceff1; color: #455a64; }
          .bytes {
              font-family: 'Courier New', monospace;
              font-size: 0.9em;
          }
          .lcp-badge {
              display: inline-block;
              background: #ff9800;
              color: white;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.75em;
              font-weight: bold;
          }
          .recommendation {
              font-size: 0.9em;
              color: #555;
              font-style: italic;
          }
          footer {
              margin-top: 40px;
              padding-top: 20px;
              border-top: 1px solid #ddd;
              text-align: center;
              color: #7f8c8d;
              font-size: 0.9em;
          }
          /* Before/after comparison section (#18/#20). */
          .comparison {
              margin: 20px 0;
          }
          .delta {
              font-weight: bold;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.9em;
          }
          .delta.improved { background: #d4edda; color: #155724; }
          .delta.regressed { background: #f8d7da; color: #721c24; }
          .delta.unchanged { background: #e2e3e5; color: #383d41; }
          .status-badge {
              display: inline-block;
              padding: 2px 8px;
              border-radius: 10px;
              color: white;
              font-size: 0.8em;
              font-weight: 500;
              text-transform: lowercase;
          }
          .roi-box {
              background: #e8f4fd;
              border-left: 4px solid var(--brand-color, #3498db);
              padding: 15px;
              margin: 15px 0;
          }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>🖼️ Shopify Image Audit Report</h1>
  
  
  '''
# ---
# name: TestRenderHeadSnapshot.test_brand_logo_only
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Shopify Image Audit Report</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container {
              max-width: 1200px;
              margin: 0 auto;
              background: white;
              padding: 40px;
              border-radius: 8px;
              box-shadow: 0 2px 8px rgba(0,0,0,0.1);
          }
          .brand-logo {
              display: block;
              max-height: 80px;
              max-width: 240px;
              margin-bottom: 20px;
          }
          h1 {
              font-size: 2em;
              margin-bottom: 10px;
              color: #1a1a1a;
          }
          h2 {
              font-size: 1.5em;
              margin-top: 30px;
              margin-bottom: 15px;
              color: #2c3e50;
              border-bottom: 2px solid var(--brand-color, #3498db);
              padding-bottom: 5px;
          }
          h3 {
              font-size: 1.2em;
              margin-top: 20px;
              margin-bottom: 10px;
              color: #34495e;
          }
          .meta {
              background: #ecf0f1;
              padding: 15px;
              border-radius: 5px;
              margin-bottom: 20px;
          }
          .meta p {
              margin: 5px 0;
          }
          .meta strong {
              color: #2c3e50;
          }
          .vitals {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .vital-card {
              background: white;
              border: 2px solid #ddd;
              border-radius: 5px;
              padding: 15px;
              text-align: center;
          }
          .vital-card.good { border-color: #27ae60; }
          .vital-card.needs-improvement { border-color: #f39c12; }
          .vital-card.poor { border-color: #e74c3c; }
          .vital-name {
              font-size: 0.9em;
              color: #7f8c8d;
              text-transform: uppercase;
              letter-spacing: 1px;
          }
          .vital-value {
              font-size: 2em;
              font-weight: bold;
              margin: 10px 0;
          }
          .vital-card.good .vital-value { color: #27ae60; }
          .vital-card.needs-improvement .vital-value { color: #f39c12; }
          .vital-card.poor .vital-value { color: #e74c3c; }
          .stats-grid {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .stat-box {
              background: var(--brand-color, #3498db);
              color: white;
              padding: 20px;
              border-radius: 5px;
              text-align: center;
          }
          .stat-value {
              font-size: 2em;
              font-weight: bold;
          }
          .stat-label {
              font-size: 0.9em;
              opacity: 0.9;
              margin-top: 5px;
          }
          .issues {
              background: #fff3cd;
              border-left: 4px solid #ffc107;
              padding: 15px;
              margin: 15px 0;
          }
          .issues ul {
              margin-left: 20px;
              margin-top: 10px;
          }
          .issues li {
              margin: 5px 0;
          }
          table {
              width: 100%;
              border-collapse: collapse;
              margin: 20px 0;
          }
          th, td {
              padding: 12px;
              text-align: left;
              border-bottom: 1px solid #ddd;
          }
          th {
              background: #34495e;
              color: white;
              font-weight: 600;
          }
          tr:hover {
              background: #f8f9fa;
          }
          .score {
              font-weight: bold;
              padding: 4px 8px;
              border-radius: 3px;
          }
          .score.high { background: #d4edda; color: #155724; }
          .score.medium { background: #fff3cd; color: #856404; }
          .score.low { background: #f8d7da; color: #721c24; }
          .role {
              display: inline-block;
              padding: 3px 8px;
              border-radius: 3px;
              font-size: 0.85em;
              font-weight: 500;
          }
          .role.hero { background: #e8f5e9; color: #2e7d32; }
          .role.above_fold { background: #e3f2fd; color: #1565c0; }
          .role.product_primary { background: #f3e5f5; color: #6a1b9a; }
          .role.product_secondary { background: #fff3e0; color: #e65100; }
          .role.decorative { background: #fce4ec; color: #c2185b; }
          .role.unknown { background: #eceff1; color: #455a64; }
          .bytes {
              font-family: 'Courier New', monospace;
              font-size: 0.9em;
          }
          .lcp-badge {
              display: inline-block;
              background: #ff9800;
              color: white;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.75em;
              font-weight: bold;
          }
          .recommendation {
              font-size: 0.9em;
              color: #555;
              font-style: italic;
          }
          footer {
              margin-top: 40px;
              padding-top: 20px;
              border-top: 1px solid #ddd;
              text-align: center;
              color: #7f8c8d;
              font-size: 0.9em;
          }
          /* Before/after comparison section (#18/#20). */
          .comparison {
              margin: 20px 0;
          }
          .delta {
              font-weight: bold;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.9em;
          }
          .delta.improved { background: #d4edda; color: #155724; }
          .delta.regressed { background: #f8d7da; color: #721c24; }
          .delta.unchanged { background: #e2e3e5; color: #383d41; }
          .status-badge {
              display: inline-block;
              padding: 2px 8px;
              border-radius: 10px;
              color: white;
              font-size: 0.8em;
              font-weight: 500;
              text-transform: lowercase;
          }
          .roi-box {
              background: #e8f4fd;
              border-left: 4px solid var(--brand-color, #3498db);
              padding: 15px;
              margin: 15px 0;
          }
      </style>
  </head>
  <body>
      <div class="container">
      <img class="brand-logo" alt="Brand logo" src="data:image/png;base64,iVBORw0KGgo=">
          <h1>🖼️ Shopify Image Audit Report</h1>
  
  
  '''
# ---
# name: TestRenderHeadSnapshot.test_default_no_brand
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Shopify Image Audit Report</title>
      <style>
          * { box-sizing: border-box; margin: 0; padding: 0; }
          body {
              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
              line-height: 1.6;
              color: #333;
              background: #f5f5f5;
              padding: 20px;
          }
          .container {
              max-width: 1200px;
              margin: 0 auto;
              background: white;
              padding: 40px;
              border-radius: 8px;
              box-shadow: 0 2px 8px rgba(0,0,0,0.1);
          }
          .brand-logo {
              display: block;
              max-height: 80px;
              max-width: 240px;
              margin-bottom: 20px;
          }
          h1 {
              font-size: 2em;
              margin-bottom: 10px;
              color: #1a1a1a;
          }
          h2 {
              font-size: 1.5em;
              margin-top: 30px;
              margin-bottom: 15px;
              color: #2c3e50;
              border-bottom: 2px solid var(--brand-color, #3498db);
              padding-bottom: 5px;
          }
          h3 {
              font-size: 1.2em;
              margin-top: 20px;
              margin-bottom: 10px;
              color: #34495e;
          }
          .meta {
              background: #ecf0f1;
              padding: 15px;
              border-radius: 5px;
              margin-bottom: 20px;
          }
          .meta p {
              margin: 5px 0;
          }
          .meta strong {
              color: #2c3e50;
          }
          .vitals {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .vital-card {
              background: white;
              border: 2px solid #ddd;
              border-radius: 5px;
              padding: 15px;
              text-align: center;
          }
          .vital-card.good { border-color: #27ae60; }
          .vital-card.needs-improvement { border-color: #f39c12; }
          .vital-card.poor { border-color: #e74c3c; }
          .vital-name {
              font-size: 0.9em;
              color: #7f8c8d;
              text-transform: uppercase;
              letter-spacing: 1px;
          }
          .vital-value {
              font-size: 2em;
              font-weight: bold;
              margin: 10px 0;
          }
          .vital-card.good .vital-value { color: #27ae60; }
          .vital-card.needs-improvement .vital-value { color: #f39c12; }
          .vital-card.poor .vital-value { color: #e74c3c; }
          .stats-grid {
              display: grid;
              grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
              gap: 15px;
              margin: 20px 0;
          }
          .stat-box {
              background: var(--brand-color, #3498db);
              color: white;
              padding: 20px;
              border-radius: 5px;
              text-align: center;
          }
          .stat-value {
              font-size: 2em;
              font-weight: bold;
          }
          .stat-label {
              font-size: 0.9em;
              opacity: 0.9;
              margin-top: 5px;
          }
          .issues {
              background: #fff3cd;
              border-left: 4px solid #ffc107;
              padding: 15px;
              margin: 15px 0;
          }
          .issues ul {
              margin-left: 20px;
              margin-top: 10px;
          }
          .issues li {
              margin: 5px 0;
          }
          table {
              width: 100%;
              border-collapse: collapse;
              margin: 20px 0;
          }
          th, td {
              padding: 12px;
              text-align: left;
              border-bottom: 1px solid #ddd;
          }
          th {
              background: #34495e;
              color: white;
              font-weight: 600;
          }
          tr:hover {
              background: #f8f9fa;
          }
          .score {
              font-weight: bold;
              padding: 4px 8px;
              border-radius: 3px;
          }
          .score.high { background: #d4edda; color: #155724; }
          .score.medium { background: #fff3cd; color: #856404; }
          .score.low { background: #f8d7da; color: #721c24; }
          .role {
              display: inline-block;
              padding: 3px 8px;
              border-radius: 3px;
              font-size: 0.85em;
              font-weight: 500;
          }
          .role.hero { background: #e8f5e9; color: #2e7d32; }
          .role.above_fold { background: #e3f2fd; color: #1565c0; }
          .role.product_primary { background: #f3e5f5; color: #6a1b9a; }
          .role.product_secondary { background: #fff3e0; color: #e65100; }
          .role.decorative { background: #fce4ec; color: #c2185b; }
          .role.unknown { background: #eceff1; color: #455a64; }
          .bytes {
              font-family: 'Courier New', monospace;
              font-size: 0.9em;
          }
          .lcp-badge {
              display: inline-block;
              background: #ff9800;
              color: white;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.75em;
              font-weight: bold;
          }
          .recommendation {
              font-size: 0.9em;
              color: #555;
              font-style: italic;
          }
          footer {
              margin-top: 40px;
              padding-top: 20px;
              border-top: 1px solid #ddd;
              text-align: center;
              color: #7f8c8d;
              font-size: 0.9em;
          }
          /* Before/after comparison section (#18/#20). */
          .comparison {
              margin: 20px 0;
          }
          .delta {
              font-weight: bold;
              padding: 2px 6px;
              border-radius: 3px;
              font-size: 0.9em;
          }
          .delta.improved { background: #d4edda; color: #155724; }
          .delta.regressed { background: #f8d7da; color: #721c24; }
          .delta.unchanged { background: #e2e3e5; color: #383d41; }
          .status-badge {
              display: inline-block;
              padding: 2px 8px;
              border-radius: 10px;
              color: white;
              font-size: 0.8em;
              font-weight: 500;
              text-transform: lowercase;
          }
          .roi-box {
              background: #e8f4fd;
              border-left: 4px solid var(--brand-color, #3498db);
              padding: 15px;
              margin: 15px 0;
          }
      </style>
  </head>
  <body>
      <div class="container">
          <h1>🖼️ Shopify Image Audit Report</h1>
  
  
  '''
# ---
# name: TestRenderImageTableSnapshot.test_table_with_three_images
  '''
          <h2>🖼️ Image Details</h2>
          <table>
              <thead>
                  <tr>
                      <th>Source</th>
                      <th>Role</th>
                      <th>Score</th>
                      <th>Size</th>
                      <th>Dimensions</th>
                      <th>Waste</th>
                      <th>Recommendation</th>
                  </tr>
              </thead>
              <tbody>
                  <tr>
                      <td class="bytes" title="https://cdn.example.com/hero.jpg"><span class="lcp-badge">LCP</span> https://cdn.example.com/hero.jpg</td>
                      <td><span class="role hero">hero</span></td>
                      <td><span class="score high">75</span></td>
                      <td class="bytes">117.2 KB</td>
                      <td>1200×600<br><small style='color:#888;'>(2400×1200)</small></td>
                      <td class="bytes">29.3 KB</td>
                      <td class="recommendation">Convert to WebP.</td>
                  </tr>
                  <tr>
                      <td class="bytes" title="https://cdn.example.com/thumb.png">https://cdn.example.com/thumb.png</td>
                      <td><span class="role decorative">decorative</span></td>
                      <td><span class="score high">95</span></td>
                      <td class="bytes">43.9 KB</td>
                      <td>200×60<br><small style='color:#888;'>(N/A×N/A)</small></td>
                      <td class="bytes">0.0 KB</td>
                      <td class="recommendation">—</td>
                  </tr>
                  <tr>
                      <td class="bytes" title="https://cdn.example.com/product.jpg">https://cdn.example.com/product.jpg</td>
                      <td><span class="role product_primary">product primary</span></td>
                      <td><span class="score medium">60</span></td>
                      <td class="bytes">371.1 KB</td>
                      <td>600×600<br><small style='color:#888;'>(N/A×N/A)</small></td>
                      <td class="bytes">0.0 KB</td>
                      <td class="recommendation">—</td>
                  </tr>
              </tbody>
          </table>
  
  
  '''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_added
  '''
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/new.jpg</td>
                      <td>— → decorative</td>
                      <td>+29.3 KB</td>
                      <td>—</td>
                      <td><span class="status-badge" style="background:#2980b9;">added</span></td>
                      <td class="recommendation">New.</td>
                  </tr>                </tbody>
              </table>
  
  '''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_empty
  ''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_improved
  '''
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/hero.jpg</td>
                      <td>hero</td>
                      <td>-48.8 KB</td>
                      <td>+10</td>
                      <td><span class="status-badge" style="background:#27ae60;">improved</span></td>
                      <td class="recommendation">Great.</td>
                  </tr>                </tbody>
              </table>
  
  '''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_regressed
  '''
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/hero.jpg</td>
                      <td>hero</td>
                      <td>+48.8 KB</td>
                      <td>-10</td>
                      <td><span class="status-badge" style="background:#c0392b;">regressed</span></td>
                      <td class="recommendation">Bad.</td>
                  </tr>                </tbody>
              </table>
  
  '''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_removed
  '''
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/old.jpg</td>
                      <td>decorative → —</td>
                      <td>-29.3 KB</td>
                      <td>—</td>
                      <td><span class="status-badge" style="background:#95a5a6;">removed</span></td>
                      <td class="recommendation">Gone.</td>
                  </tr>                </tbody>
              </table>
  
  '''
# ---
# name: TestRenderPerImageDeltasSnapshot.test_unchanged
  '''
              <h3>📸 Per-Image Changes</h3>
              <table>
                  <thead>
                      <tr>
                          <th>Source</th>
                          <th>Role</th>
                          <th>Bytes</th>
                          <th>Score</th>
                          <th>Status</th>
                          <th>Recommendation</th>
                      </tr>
                  </thead>
                  <tbody>
                  <tr>
                      <td>https://cdn.example.com/unchanged.jpg</td>
                      <td>decorative</td>
                      <td>0.0 KB</td>
                      <td>0</td>
                      <td><span class="status-badge" style="background:#7f8c8d;">unchanged</span></td>
                      <td class="recommendation"></td>
                  </tr>                </tbody>
              </table>
  
  '''
# ---
# name: TestRenderRoleDistributionSnapshot.test_multiple_roles_sorted
  '''
          <h2>📋 Role Distribution</h2>
          <ul>
              <li><span class="role above_fold">above fold</span>: 3 images</li>
              <li><span class="role decorative">decorative</span>: 2 images</li>
              <li><span class="role hero">hero</span>: 1 image</li>
              <li><span class="role product_primary">product primary</span>: 5 images</li>
              <li><span class="role unknown">unknown</span>: 1 image</li>
          </ul>
  
  '''
# ---
# name: TestRenderRoleDistributionSnapshot.test_single_role
  '''
          <h2>📋 Role Distribution</h2>
          <ul>
              <li><span class="role hero">hero</span>: 1 image</li>
          </ul>
  
  '''
# ---
# name: TestRenderStatsSnapshot.test_aggregate_stats_basic
  '''
          <h2>📈 Image Summary</h2>
          <div class="stats-grid">
              <div class="stat-box">
                  <div class="stat-value">3</div>
                  <div class="stat-label">Total Images</div>
              </div>
              <div class="stat-box" style="background: #9b59b6;">
                  <div class="stat-value">0.52 MB</div>
                  <div class="stat-label">Total Size</div>
              </div>
              <div class="stat-box" style="background: #e74c3c;">
                  <div class="stat-value">29 KB</div>
                  <div class="stat-label">Est. Waste</div>
              </div>
              <div class="stat-box" style="background: #27ae60;">
                  <div class="stat-value">77</div>
                  <div class="stat-label">Avg Score</div>
              </div>
          </div>
  
  
  '''
# ---
# name: TestRenderVitalsSnapshot.test_all_vitals
  '''
          <h2>📊 Core Web Vitals</h2>
          <div class="vitals">
              <div class="vital-card good">
                  <div class="vital-name">LCP</div>
                  <div class="vital-value">2200ms</div>
                  <div class="vital-status">Good</div>
              </div>
              <div class="vital-card good">
                  <div class="vital-name">CLS</div>
                  <div class="vital-value">0.080</div>
                  <div class="vital-status">Good</div>
              </div>
              <div class="vital-card good">
                  <div class="vital-name">INP</div>
                  <div class="vital-value">180ms</div>
                  <div class="vital-status">Good</div>
              </div>
              <div class="vital-card good">
                  <div class="vital-name">TTFB</div>
                  <div class="vital-value">700ms</div>
                  <div class="vital-status">Good</div>
              </div>
          </div>
  
  
  '''
# ---
